@@ -7,6 +7,11 @@ Revision history for Perl extension App::Sqitch
        `connections.dbname` variables in the SnowSQL configuration file
        (`~/.snowsql/config`) before falling back on the hard-coded warehouse
        name "sqitch" and using the system username as the database name.
+     - Removed fallback in the PostgreSQL engine on the `$PGUSER` and
+       `$PGPASSWORD` environnment variables, as well as the system username,
+       since libpq does all that automatically, and collects data from other
+       sources that we did not (e.g., the password and connection service
+       files). Thanks to Tom Bloor for the report (issue #410).
 
 0.9998 2018-10-03T20:53:58Z
      - Fixed an issue where Sqitch would sometimes truncate the registry
